--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "classnames": "^2.2.6",
+    "deepmerge": "^4.2.2",
+    "highcharts": "^8.0.0",
+    "highcharts-react-official": "^2.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.1"
